# BeatBox-Legacy

./: .gitignore  BeatBox.jucer  CMakeLists.txt  LICENSE  OnsetDetectionGist.data  README.md  beatbox.jucer  plotMyAss.sh
.github/workflows/: actions.yml
BeatboxGan/: AudioFile.hpp  CMakeLists.txt  Main.cpp  README.md  onsets  samples
BeatboxGan/libtorch/: build-hash
BeatboxGan/libtorch/share/cmake/Caffe2/: Caffe2ConfigVersion.cmake
Builds/LinuxMakefile/: Makefile
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: AnalyserComponent.h  BeatBoxComponent.cpp  BeatBoxComponent.h  EncoderComponent.hpp  GUIComponent.cpp  GUIComponent.h  GuiComponent.cpp  GuiComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  ProcessorComponent.cpp  ProcessorComponent.h  ThumbnailComponent.h
Source/Audio/: AudioResultComponent.cpp  AudioResultComponent.h
Source/BeatBox/: BeatBox.cpp  BeatBox.h
Source/Samples/: AnalyserComponent.cpp  AudioRecorder.hpp
Source/Style/: OtherLookAndFeel.hpp
Source/ThumbnailTools/: SimplePeakModelization.h  SimplePositionOverlay.h  SimpleThresholdIndex.h  SimpleThumbnailComponent.h
Source/Thumbnails/: ConvertedThumbnailComponent.h  OriginalThumbnailComponent.h
Source/Thumbnails/Tools/: SimplePeakModelization.h  SimplePositionOverlay.h  SimpleThresholdIndex.h  SimpleThumbnailComponent.h
